Switch to PF Checkbox to correct alignment

--- a/frontend/packages/console-app/src/components/network-policies/_create-network-policy.scss
+++ b/frontend/packages/console-app/src/components/network-policies/_create-network-policy.scss
@@ -4,14 +4,6 @@
   }
 }
 
-.co-create-networkpolicy__deny-checkboxes {
-  display: flex;
-}
-
-.co-create-networkpolicy__deny-checkbox {
-  padding-right: 1rem;
-}
-
 /* Style override for FormFieldGroupExpandable: bigger font (~h2), move toggle icon a little bit lower */
 .co-create-networkpolicy__expandable-xl
   > .pf-v5-c-form__field-group-header
